# clones

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
.agents/skills/saas-auth-billing-ops/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: account-ops.agent.md  forensic-investigator.agent.md  prd-supervisor.agent.md
.github/workflows/: ci.yml
docs/: DEPLOYMENT_EVIDENCE.md  GO_LIVE_RUNBOOK.md  LAUNCH_CHECKLIST.md  PLAN.md  PRD.md
site/functions/: _account.js  account-config.js  account-me.js  account-portal.js  create-checkout.js  get-license.js
site/public/: account.html  account.js  app.js  index.html  privacy.html  style.css  success.html  terms.html
src/geobrief/: __init__.py  __main__.py  assistant.py  billing.py  casework.py  cleaning.py  detection.py  geotools.py  hashing.py  ingest.py  kml.py  licensing.py  models.py  pipeline.py  report.py  reporting.py  store.py  subscription.py  timezones.py  training.py
supabase/: config.toml
supabase/migrations/: 20260703033201_geobrief_saas_accounts.sql
supabase/templates/: confirm_signup.html  magic_link.html  recovery.html
tests/: conftest.py  test_assistant.py  test_billing.py  test_cleaning.py  test_cli.py  test_detection.py  test_geotools.py  test_hashing.py  test_ingest.py  test_kml.py  test_licensing.py  test_pipeline.py  test_report.py  test_store.py  test_subscription.py  test_timezones.py  test_training.py  test_webapp.py
(+18 files in other folders)
